<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80deea"
    tools:context=".temperatura" >

    <Button
        android:id="@+id/button5"
        android:layout_width="194dp"
        android:layout_height="87dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#00B8D4"
        android:text="@string/cender"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="189dp"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#00B8D4"
        android:text="@string/cencender"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="226dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:text="@string/temperatura"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="63dp"
        android:layout_height="68dp"
        android:layout_marginStart="104dp"
        android:src="@drawable/temperatura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="315dp"
        android:layout_height="99dp"
        android:layout_marginBottom="212dp"
        android:gravity="center_horizontal"
        android:text="@string/encendidoventilador"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="123dp"
        android:layout_height="72dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="384dp"
        android:text="@string/grados"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>