<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80deea"
    tools:context=".garage"
    tools:layout_editor_absoluteX="-28dp"
    tools:layout_editor_absoluteY="109dp">

    <Button
        android:id="@+id/button3"
        android:layout_width="191dp"
        android:layout_height="74dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00B8D4"
        android:text="@string/si"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00B8D4"
        android:text="@string/no"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_marginBaseline="12dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="39dp"
        android:gravity="center_horizontal"
        android:text="@string/controldepuerta"
        android:textColor="#020000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="91dp"
        android:layout_height="21dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/puerta"
        android:textColor="#050000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#00B8D4"
        android:text="@string/añadirpuerta"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="218dp"
        android:layout_height="137dp"
        android:layout_marginTop="24dp"
        android:background="#26C6DA"
        android:src="@drawable/garage"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="clip_vertical|center_horizontal"
        android:text="@string/dispositivosañadidos"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:backgroundTint="#00B8D4"
        android:src="@drawable/vdasdaddsasdaspng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>